--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
+body {
+  background-color: cadetblue;
+}
+
 main {
   width: 100%;
   height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 15px;
 }
 
 #conjunto {
@@ -9,7 +18,9 @@ main {
 
 button {
   width: 13vw;
-  height: 20vh;
+  height: 26vh;
+  background: none;
+  border-radius: 50px;
 }
 
 
@@ -18,6 +29,7 @@ button {
   height: 100%;
   background-repeat: no-repeat;
   background-position: center;
+  background-size: contain;
 }
 #papel-img { background-image: url('./assets/papel.png'); }
 #pedra-img { background-image: url('./assets/pedra.png'); }
